[package]
name = "learning_statistics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
rayon = "1.8.0"
serde = { version = "1.0.189", features = ["derive"] }
stats = { version = "0.1.0", path = "stats" }
